[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/anima/ui/AnimaCustomNodeTitle.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/fonts/Lato-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/anima/ui/shared/AnimaGodotUIToolButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Image" id=8]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 223, 223, 223, 0, 222, 222, 222, 0, 222, 222, 222, 0, 223, 223, 223, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 218, 218, 218, 0, 221, 221, 221, 0, 221, 221, 221, 92, 223, 223, 223, 185, 222, 222, 222, 231, 222, 222, 222, 231, 223, 223, 223, 186, 222, 222, 222, 95, 222, 222, 222, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 218, 218, 218, 35, 222, 222, 222, 207, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 209, 223, 223, 223, 41, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 175, 175, 175, 0, 223, 223, 223, 32, 223, 223, 223, 226, 223, 223, 223, 254, 223, 223, 223, 225, 221, 221, 221, 83, 223, 223, 223, 24, 223, 223, 223, 24, 221, 221, 221, 84, 223, 223, 223, 225, 223, 223, 223, 254, 223, 223, 223, 228, 218, 218, 218, 35, 194, 194, 194, 0, 0, 0, 0, 0, 127, 127, 127, 0, 127, 127, 127, 2, 223, 223, 223, 213, 223, 223, 223, 254, 223, 223, 223, 225, 210, 210, 210, 17, 217, 217, 217, 0, 223, 223, 223, 0, 223, 223, 223, 0, 217, 217, 217, 0, 210, 210, 210, 17, 223, 223, 223, 225, 223, 223, 223, 254, 223, 223, 223, 217, 170, 170, 170, 3, 170, 170, 170, 0, 223, 223, 223, 0, 223, 223, 223, 89, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 87, 217, 217, 217, 0, 220, 220, 220, 59, 223, 223, 223, 200, 223, 223, 223, 200, 220, 220, 220, 59, 217, 217, 217, 0, 222, 222, 222, 87, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 93, 222, 222, 222, 0, 223, 223, 223, 0, 223, 223, 223, 209, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 24, 222, 222, 222, 0, 222, 222, 222, 198, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 198, 222, 222, 222, 0, 223, 223, 223, 24, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 209, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 209, 223, 223, 223, 254, 223, 223, 223, 254, 214, 214, 214, 19, 218, 218, 218, 0, 222, 222, 222, 199, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 199, 222, 222, 222, 0, 223, 223, 223, 24, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 209, 223, 223, 223, 0, 222, 222, 222, 0, 222, 222, 222, 94, 223, 223, 223, 254, 223, 223, 223, 254, 221, 221, 221, 84, 217, 217, 217, 0, 220, 220, 220, 59, 223, 223, 223, 201, 223, 223, 223, 200, 220, 220, 220, 59, 217, 217, 217, 0, 222, 222, 222, 85, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 94, 222, 222, 222, 0, 170, 170, 170, 0, 170, 170, 170, 3, 223, 223, 223, 222, 223, 223, 223, 254, 223, 223, 223, 224, 210, 210, 210, 17, 217, 217, 217, 0, 223, 223, 223, 0, 223, 223, 223, 0, 217, 217, 217, 0, 210, 210, 210, 17, 223, 223, 223, 224, 223, 223, 223, 254, 223, 223, 223, 222, 170, 170, 170, 3, 170, 170, 170, 0, 0, 0, 0, 0, 196, 196, 196, 0, 223, 223, 223, 41, 223, 223, 223, 232, 223, 223, 223, 254, 223, 223, 223, 225, 221, 221, 221, 83, 223, 223, 223, 24, 223, 223, 223, 24, 221, 221, 221, 83, 223, 223, 223, 225, 223, 223, 223, 254, 223, 223, 223, 232, 223, 223, 223, 41, 196, 196, 196, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 220, 220, 220, 44, 223, 223, 223, 216, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 216, 220, 220, 220, 44, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 173, 173, 173, 0, 127, 127, 127, 2, 223, 223, 223, 98, 222, 222, 222, 190, 223, 223, 223, 232, 223, 223, 223, 232, 222, 222, 222, 190, 223, 223, 223, 98, 127, 127, 127, 2, 173, 173, 173, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 127, 127, 127, 0, 223, 223, 223, 0, 222, 222, 222, 0, 223, 223, 223, 0, 223, 223, 223, 0, 222, 222, 222, 0, 223, 223, 223, 0, 127, 127, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=3]
flags = 0
flags = 0
image = SubResource( 8 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=9]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 222, 222, 222, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 180, 222, 222, 222, 207, 221, 221, 221, 53, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 219, 219, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 214, 220, 220, 220, 52, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 181, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 180, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 214, 220, 220, 220, 52, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 219, 219, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 152, 222, 222, 222, 191, 220, 220, 220, 52, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 222, 222, 222, 0, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=5]
flags = 0
flags = 0
image = SubResource( 9 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=10]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 85, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 222, 222, 222, 85, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 85, 223, 223, 223, 254, 223, 223, 223, 210, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 210, 223, 223, 223, 254, 222, 222, 222, 85, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 218, 218, 218, 0, 218, 218, 218, 21, 223, 223, 223, 210, 224, 224, 224, 255, 223, 223, 223, 209, 216, 216, 216, 20, 216, 216, 216, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 209, 224, 224, 224, 255, 223, 223, 223, 210, 218, 218, 218, 21, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 219, 219, 219, 0, 220, 220, 220, 22, 223, 223, 223, 210, 224, 224, 224, 255, 222, 222, 222, 207, 216, 216, 216, 20, 216, 216, 216, 20, 223, 223, 223, 208, 224, 224, 224, 255, 223, 223, 223, 210, 220, 220, 220, 22, 219, 219, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 22, 223, 223, 223, 212, 224, 224, 224, 255, 222, 222, 222, 207, 222, 222, 222, 207, 224, 224, 224, 255, 223, 223, 223, 211, 220, 220, 220, 22, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 22, 223, 223, 223, 213, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 212, 220, 220, 220, 22, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 210, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 210, 224, 224, 224, 255, 223, 223, 223, 210, 223, 223, 223, 210, 224, 224, 224, 255, 223, 223, 223, 209, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 209, 224, 224, 224, 255, 223, 223, 223, 210, 218, 218, 218, 21, 220, 220, 220, 22, 223, 223, 223, 210, 224, 224, 224, 255, 223, 223, 223, 208, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 222, 222, 222, 207, 224, 224, 224, 255, 223, 223, 223, 211, 220, 220, 220, 22, 219, 219, 219, 0, 220, 220, 220, 0, 220, 220, 220, 22, 223, 223, 223, 211, 224, 224, 224, 255, 222, 222, 222, 207, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 85, 224, 224, 224, 255, 223, 223, 223, 212, 220, 220, 220, 22, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 22, 223, 223, 223, 212, 224, 224, 224, 255, 222, 222, 222, 85, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 86, 220, 220, 220, 22, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 22, 222, 222, 222, 86, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=7]
flags = 0
flags = 0
image = SubResource( 10 )
size = Vector2( 16, 16 )

[node name="CustomNodeTitle" type="PanelContainer"]
margin_right = 212.0
margin_bottom = 38.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 205.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Container"]
margin_bottom = 24.0
stretch_mode = 4

[node name="Spacer" type="Control" parent="Container"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 24.0

[node name="Title" type="Label" parent="Container"]
margin_left = 8.0
margin_top = 1.0
margin_right = 134.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Title goes here"

[node name="CollapseButton" parent="Container" instance=ExtResource( 4 )]
visible = false
margin_left = 130.0
margin_right = 158.0
margin_bottom = 24.0
toggle_mode = true
icon = SubResource( 3 )
icon_name = "GuiVisibilityVisible"
pressed_icon_name = "GuiVisibilityHidden"

[node name="PlayButton" parent="Container" instance=ExtResource( 4 )]
margin_left = 138.0
margin_right = 166.0
margin_bottom = 24.0
icon = SubResource( 5 )
icon_name = "Play"

[node name="RemoveButton" parent="Container" instance=ExtResource( 4 )]
margin_left = 170.0
margin_right = 198.0
margin_bottom = 24.0
icon = SubResource( 7 )
icon_name = "Close"

[connection signal="pressed" from="Container/CollapseButton" to="." method="_on_CollapseButton_pressed"]
[connection signal="pressed" from="Container/RemoveButton" to="." method="_on_RemoveButton_pressed"]
